--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+# It will include the node_modules folder of both react-app and the backend folder
+node_modules
 /.pnp
 .pnp.js
 
